--- a/css/style.css
+++ b/css/style.css
@@ -261,15 +261,28 @@ main > .portfolio{
   height: 100%;
   padding-inline: 1.1em;
   object-fit: cover;/*check this and grid auto-fit*/
+  background-attachment: fixed;
 }
 
 .container__item > figure > figcaption{
   position: absolute;
-  bottom: .2%;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   padding-block-start: .6em;
-  background: rgba(255,255,255,.3);
+  background: inherit;
+  overflow: hidden;
+}
+.container__item > figure > figcaption::before{
+  content: "";
+  position: absolute;
+  width: 10em;
+  height: 5.3em;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: inset 0 0 0 200px rgb(255 255 255 / 20%);
+  filter: blur(10px);
 }
 
 
